fix solution with border collapse at table and th

--- a/homework_03/css/style1.css
+++ b/homework_03/css/style1.css
@@ -48,6 +48,8 @@ body {
       padding: 10px 20px;
       font-weight: normal;
       text-transform: uppercase; }
+      #content table th:nth-child(-n+2) {
+        border-right: 1px solid #fff; }
     #content table td {
       padding: 10px 20px; }
     #content table tr {
