--- a/homework_03/css/style2.css
+++ b/homework_03/css/style2.css
@@ -51,6 +51,8 @@ body {
       padding: 10px 20px;
       font-weight: normal;
       text-transform: uppercase; }
+      #content table th:nth-child(-n+2) {
+        border-right: 1px solid #fff; }
     #content table td {
       padding: 10px 20px; }
     #content table tr {
