--- a/homework_03/scss/_main.scss
+++ b/homework_03/scss/_main.scss
@@ -148,6 +148,9 @@ body {
       padding: 10px 20px;
       font-weight: normal;
       text-transform: uppercase;
+        &:nth-child(-n+2) {
+        border-right: 1px solid #fff;
+      }
     }
 
     td {
